# final-year-project-demo

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  demo.vault
client/src/: auth.rs  gui.rs  main.rs  metadata.rs  msg_receiver.rs  secret_key.rs  utils.rs
server/: .gitignore  Cargo.toml
server/.cargo/: config.toml
server/src/: auth.rs  database.rs  main.rs  msg_receiver.rs  seed_gen.rs  storage.rs
shared/: Cargo.toml
shared/src/: lib.rs
