[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2"
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }

rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = "1.0"
postcard = { version = "1", features = ["use-std"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
scrypt = "0.11"
sha3 = "0.10"
chacha20poly1305 = "0.10"
zeroize = "1.5"
password-hash = "0.5"

shared = { path = "../shared" }
tracing-appender = "0.2.2"
egui = "0.21.0"
eframe = "0.21.3"
egui_extras = "0.21.0"
egui-notify = "0.6.0"
serde-byte-array = "0.1.2"
thiserror = "1.0.40"

[dependencies.aucpace]
version = "0.1.1"
default-features = false
features = [
    "scrypt",
    "getrandom",
    "zeroize",
    "alloc",
    "serde",
    "strong_aucpace"
]
