[package]
name = "server"
version = "0.1.0"
authors = ["Sam <tritoke@protonmail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "0.2"
alloc-cortex-m = "0.4.4"

embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "stm32f401re", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "defmt", "integrated-timers", "executor-thread"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits"] }

panic-probe = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3"

aucpace = { git = "https://github.com/RustCrypto/PAKEs", rev = "237b48d", default-features = false, features = ["zeroize", "serde", "strong_aucpace", "partial_augmentation"] }
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
serde = { version = "1.0", default-features = false }
postcard = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4.0.0-rc.1", default-features = false }
password-hash = { version = "0.5", default-features = false }

[[bin]]
name = "server"
harness = false
