[package]
name = "server"
version = "0.1.0"
authors = ["Sam <tritoke@protonmail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
alloc-cortex-m = "0.4.4"

embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "stm32f401re", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "defmt", "integrated-timers", "executor-thread"] }
embassy-time = { version = "0.1.3", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits"] }

panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3"

aucpace = { version = "0.1.1", default-features = false, features = ["zeroize", "serde", "strong_aucpace"] }
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
serde = { version = "1.0", default-features = false }
postcard = { version = "1", default-features = false, features = ["use-defmt"] }
subtle = { version = "2.4", default-features = false }
sha3 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4.0.0-rc.1", default-features = false }
password-hash = { version = "0.5", default-features = false }
const-random = "0.1"
chacha20poly1305 =  { version = "0.10", default-features = false, features = ["rand_core"] }

shared = { path = "../shared" }
cobs = { version = "0.2.3", default-features = false }

[[bin]]
name = "server"
harness = false
